[gd_scene load_steps=2 format=3 uid="uid://cd3dsxakflmvo"]

[ext_resource type="Script" path="res://scripts/camera_area.gd" id="1_wt7fd"]

[node name="CameraArea" type="Area2D"]
collision_layer = 0
script = ExtResource("1_wt7fd")

[node name="CameraPoint" type="Marker2D" parent="."]
unique_name_in_owner = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_shape_entered" from="." to="." method="_on_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
